[package]
name = "x"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = "z"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
owo-colors = "3.5"
indicatif = "0.17"
aes-gcm = "0.10"
rand = "0.8"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
blake3 = "1.5"
dirs = "5.0"
clipboard = "0.5"
self_update = "0.18"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
